src/image_proc/NexysVideo-master_v3/Projects/hdmi/proj/hdmi.sdk/.metadata/.plugins/org.eclipse.cdt.ui/videodemo.build.log
21:08:51 **** Auto Build of configuration Debug for project videodemo ****
make all 
'Building file: ../src/video_capture/video_capture.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/video_capture/video_capture.o" -IC:/Xilinx/Projects/NexysVideo-master/Projects/hdmi/sdk/videodemo_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.5 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -MMD -MP -MF"src/video_capture/video_capture.d" -MT"src/video_capture/video_capture.o" -o "src/video_capture/video_capture.o" "../src/video_capture/video_capture.c"
'Finished building: ../src/video_capture/video_capture.c'
' '
'Building file: ../src/intc/intc.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/intc/intc.o" -IC:/Xilinx/Projects/NexysVideo-master/Projects/hdmi/sdk/videodemo_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.5 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -MMD -MP -MF"src/intc/intc.d" -MT"src/intc/intc.o" -o "src/intc/intc.o" "../src/intc/intc.c"
'Finished building: ../src/intc/intc.c'
' '
'Building file: ../src/dynclk/dynclk.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/dynclk/dynclk.o" -IC:/Xilinx/Projects/NexysVideo-master/Projects/hdmi/sdk/videodemo_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.5 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -MMD -MP -MF"src/dynclk/dynclk.d" -MT"src/dynclk/dynclk.o" -o "src/dynclk/dynclk.o" "../src/dynclk/dynclk.c"
'Finished building: ../src/dynclk/dynclk.c'
' '
'Building file: ../src/display_ctrl/display_ctrl.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/display_ctrl/display_ctrl.o" -IC:/Xilinx/Projects/NexysVideo-master/Projects/hdmi/sdk/videodemo_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.5 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -MMD -MP -MF"src/display_ctrl/display_ctrl.d" -MT"src/display_ctrl/display_ctrl.o" -o "src/display_ctrl/display_ctrl.o" "../src/display_ctrl/display_ctrl.c"
'Finished building: ../src/display_ctrl/display_ctrl.c'
' '
'Building file: ../src/video_demo.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/video_demo.o" -IC:/Xilinx/Projects/NexysVideo-master/Projects/hdmi/sdk/videodemo_bsp/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.5 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -MMD -MP -MF"src/video_demo.d" -MT"src/video_demo.o" -o "src/video_demo.o" "../src/video_demo.c"
In file included from c:\xilinx\sdk\2016.2\gnu\microblaze\nt\microblaze-xilinx-elf\include\string.h:10:0,
                 from ../src/video_capture/../../../videodemo_bsp/microblaze_0/include/xaxivdma_i.h:74,
                 from ../src/video_capture/../../../videodemo_bsp/microblaze_0/include/xaxivdma.h:304,
                 from ../src/video_capture/video_capture.h:75,
                 from ../src/video_demo.c:29:
c:\xilinx\sdk\2016.2\gnu\microblaze\nt\microblaze-xilinx-elf\include\stdio.h:223:9: error: conflicting types for 'print'
 void    _EXFUN(print, (const char* ));
         ^
In file included from ../src/video_capture/../../../videodemo_bsp/microblaze_0/include/xil_io.h:70:0,
                 from ../src/video_capture/../../../videodemo_bsp/microblaze_0/include/xaxivdma_hw.h:82,
                 from ../src/video_capture/../../../videodemo_bsp/microblaze_0/include/xaxivdma.h:303,
                 from ../src/video_capture/video_capture.h:75,
                 from ../src/video_demo.c:29:
../src/video_capture/../../../videodemo_bsp/microblaze_0/include/xil_printf.h:42:6: note: previous declaration of 'print' was here
 void print(char *ptr);
      ^
../src/video_demo.c: In function 'DemoRun':
../src/video_demo.c:281:11: warning: format '%d' expects argument of type 'int', but argument 2 has type 'u32 {aka long unsigned int}' [-Wformat=]
    printf("%d", locked);
           ^
../src/video_demo.c:281:11: warning: format '%d' expects argument of type 'int', but argument 2 has type 'u32 {aka long unsigned int}' [-Wformat=]
../src/video_demo.c:285:4: warning: implicit declaration of function 'MB_Sleep' [-Wimplicit-function-declaration]
    MB_Sleep(50);
    ^
../src/video_demo.c: In function 'DemoPrintMenu':
../src/video_demo.c:301:9: warning: format '%d' expects argument of type 'int', but argument 2 has type 'u32 {aka long unsigned int}' [-Wformat=]
  printf("*Display Frame Index: %27d*\n\r", dispCtrl.curFrame);
         ^
../src/video_demo.c:301:9: warning: format '%d' expects argument of type 'int', but argument 2 has type 'u32 {aka long unsigned int}' [-Wformat=]
../src/video_demo.c:304:9: warning: format '%d' expects argument of type 'int', but argument 2 has type 'u32 {aka long unsigned int}' [-Wformat=]
  printf("*Video Frame Index: %29d*\n\r", videoCapt.curFrame);
         ^
../src/video_demo.c:304:9: warning: format '%d' expects argument of type 'int', but argument 2 has type 'u32 {aka long unsigned int}' [-Wformat=]
make: *** [src/video_demo.o] Error 1

21:08:54 Build Finished (took 2s.940ms)

